# CMakeProjectCreator

./: CMakeLists.txt
src/include/: cmake_project_creator.hpp  header_only_strategy.hpp  project_question.hpp  project_strategy.hpp  question_asker.hpp
src/src/: cmake_project_creator.cpp  header_only_strategy.cpp  main.cpp  question_asker.cpp
